[PAXEXAM-810]also add another necessary package